add new items and changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="main.css" />
-    <script src="./js/index.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
@@ -14,8 +13,8 @@
       <header class="header lg:h-[110vh]">
         <div class="max-w-[1200px] w-[90%] m-auto">
           <!-- =================================================adding navbar=============================== -->
-          <nav class="py-4">
-            <h2 class="text-3xl">Logo</h2>
+          <nav class="py-2">
+            <img src="./assest/logo.png" alt="logo" class="w-20">
           </nav>
 
           <!-- ==============================main section=========================================== -->
@@ -28,7 +27,7 @@
                   We Are A Leading Private Label Cosmetics Manufacturer
                 </h1>
                 <p class="text-white text-[1.2rem] font-extralight">
-                  At Palmist, we’re not just another company that pushes the
+                  At Gorgeous Cosmos, we’re not just another company that pushes the
                   existing formulations. We recommend and handhold the customers
                   by suggesting formulations that are new age and have the
                   capacity to grow in today’s market.
@@ -145,7 +144,7 @@
             </div>
 
             <div class="advantageVideo w-full md:w-[50%] flex items-center">
-                <iframe width="100%" class="object-cover" height="315" src="https://www.youtube.com/embed/2YYlMUliJV8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <video src="./videos/video (2160p).mp4" controls autoplay loop></video>
             </div>
           </div>
         </div>
@@ -164,20 +163,20 @@
             <div class="serviceItems">
                 <div class="threeItems flex gap-10 flex-col md:flex-row justify-between">
                     <div class="h-[300px] w-full md:w-[30%] relative hover:scale-105 transition-all">
-                        <img src="./assest/Label.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
+                        <img src="./assest/service/label.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
                         <div class="absolute top-0 p-[3rem] flex items-end w-full bg-[#03030370] z-10 h-full">
                           <p class="text-white text-3xl w-[50%]">Private labelling</p>
                         </div>
                     </div>
                     <div class="h-[300px] w-full md:w-[30%] relative hover:scale-105 transition-all">
-                        <img src="./assest/White-Label-Manufacturer.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
+                        <img src="./assest/service/white_label.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
                         <div class="absolute top-0 p-[3rem] flex items-end w-full bg-[#03030370] z-10 h-full">
                           <p class="text-white text-3xl w-[50%]">White Label Manufacturer</p>
                         </div>
                     </div>
 
                     <div class="h-[300px] w-full md:w-[30%] relative hover:scale-105 transition-all">
-                        <img src="./assest/Cosmetic-Manufacturer.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
+                        <img src="./assest/service/formulation.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
                         <div class="absolute top-0 p-[3rem] flex items-end w-full bg-[#03030370] z-10 h-full">
                           <p class="text-white text-3xl w-[50%]">Custom Formulatoin</p>
                         </div>
@@ -192,7 +191,7 @@
                         </div>
                     </div>
                 <div class="h-[300px] md:w-[30%] relative hover:scale-105 transition-all" >
-                    <img src="./assest/Travel-Pack.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
+                    <img src="./assest/service/perfume.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
                     <div class="absolute top-0 p-[3rem] flex items-end w-full bg-[#03030370] z-10 h-full">
                       <p class="text-white text-3xl w-[50%]">R&D For New Concepts</p>
                     </div>
@@ -275,7 +274,7 @@
               <p class="text-red-500 space-x-5">UNRIVALED EXPERTISE AND COMMITMENT TO YOUR BRAND’S SUCCESS</p>
               <div class="border border-t-slate-300 w-[25%] mt-1 mb-3"></div>
               <h2 class="my-3 text-5xl">Why Choose Us?</h2>
-              <p>At Palmist Healthcare, we understand the importance of creating a beauty brand that captivates your target audience and stands out in the competitive cosmetics market. Here’s why partnering with us will give your brand the competitive edge it deserves:</p>
+              <p>At Gorgeous Cosmos Healthcare, we understand the importance of creating a beauty brand that captivates your target audience and stands out in the competitive cosmetics market. Here’s why partnering with us will give your brand the competitive edge it deserves:</p>
             </div>
 
             <div class="flex justify-between flex-col md:flex-row mt-5">
@@ -341,7 +340,7 @@
           <div class=" justify-between mt-10 lg:w-full relative flex flex-row sm:hidden lg:block border-green-700"> 
 
             
-            <div class="icons w-[50%] lg:w-full flex gap-10 flex-col lg:flex-row justify-center lg:justify-between relative">
+            <div class="icons w-[50%] lg:w-full flex gap-10 flex-col lg:flex-row justify-center lg:justify-between relative lg:px-10">
 
               <div class="w-[0%] lg:w-[100%] left-[50%] lg:left-0 h-[100%] absolute m-auto top-0 flex ">
               <div class="border-l lg:border-t lg:border-t-[#F15D60] border-l-[#f15D60] lg:w-[80%] h-[70%] lg:h-0 m-auto "></div>
@@ -361,7 +360,7 @@
               </div>
             </div>
 
-            <div class="w-[50%] lg:w-full flex flex-col lg:flex-row justify-between py-5 px-2 ">
+            <div class="w-[50%] lg:w-full flex flex-col lg:flex-row justify-between py-5 px-2 lg:px-0 lg:gap-10">
 
                 <div>
                   <h2 class="text-2xl md:text-center mb-5">Step-1</h2>
@@ -417,7 +416,7 @@
             </div>
 
             <div class="text-center md:w-[30%] p-[1rem] ">
-              <img src="./assest/factoryImages/Manufacturer.jpg" alt="factory" class="block m-auto" width="100%">
+              <img src="./assest/factoryImages/manu.jpg" alt="factory" class="block m-auto" width="100%">
               <h2 class="text-3xl my-3">Leading Manufacturer</h2>
               <p>One of the leading manufacturers of cosmetics and products that are used by customers all over the world.</p>
             </div>
@@ -472,31 +471,31 @@
               <div class="slider my-8 cursor-pointer">
                 <div id="flip" class="p-[0.5rem] flex justify-between font-bold">What Kind of cosmetic products do you manufacturer? <span id="arrow"> <i class="fa-solid fa-angle-down"></i> </span> </div>
 
-                <div id="panel" class=" panel p-[0.5rem] hidden">We specialize in third-party contract manufacturing of skincare, haircare, and personal care products. We offer custom formulations and private labeling services for your brand.</div>
+                <div id="panel" class="p-[0.5rem] hidden">We specialize in third-party contract manufacturing of skincare, haircare, and personal care products. We offer custom formulations and private labeling services for your brand.</div>
               </div>
 
               <div class="slider my-8 cursor-pointer">
                 <div id="flipTwo" class="p-[0.5rem] flex justify-between font-bold">What Kind of formulations do you use for your products? <span id="arrowOne"> <i class="fa-solid fa-angle-down"></i> </span></div>
 
-                <div id="panelOne" class="panel hidden p-[0.5rem]">We use high-quality herbal and natural ingredients in our formulations to ensure that our products are safe, effective, and eco-friendly.</div>
+                <div id="panelOne" class="hidden p-[0.5rem]">We use high-quality herbal and natural ingredients in our formulations to ensure that our products are safe, effective, and eco-friendly.</div>
               </div>
 
               <div class="slider my-8 cursor-pointer">
                 <div id="flipThree" class="p-[0.5rem] flex justify-between font-bold">How experience is your team? <span id="arrowTwo"> <i class="fa-solid fa-angle-down"></i> </span></div>
 
-                <div id="panelTwo" class="panel hidden p-[0.5rem]">Our team of professionals has years of experience in the cosmetic industry. They are skilled, trained, and dedicated to providing high-quality products and services to our clients.</div>
+                <div id="panelTwo" class="hidden p-[0.5rem]">Our team of professionals has years of experience in the cosmetic industry. They are skilled, trained, and dedicated to providing high-quality products and services to our clients.</div>
               </div>
 
               <div class="slider my-8 cursor-pointer">
                 <div id="flipFour" class="p-[0.5rem] flex justify-between font-bold">What is the minimum order quantity (MOQ) for your products? <span id="arrowThree"> <i class="fa-solid fa-angle-down"></i> </span></div>
 
-                <div id="panelThree" class="panel hidden p-[0.5rem]">Our MOQ for custom formulations and private labeling is 1000 units per product.</div>
+                <div id="panelThree" class="hidden p-[0.5rem]">Our MOQ for custom formulations and private labeling is 1000 units per product.</div>
               </div>
 
               <div class="slider my-8 cursor-pointer">
                 <div id="flipFive" class="p-[0.5rem] flex justify-between font-bold">What is private lebeling? <span id="arrowFour"> <i class="fa-solid fa-angle-down"></i> </span></div>
 
-                <div id="panelFour" class="panel hidden p-[0.5rem]">Private labeling is the process of branding products that are manufactured by a third party. We can manufacture products for your brand and apply your own branding and labeling to the packaging</div>
+                <div id="panelFour" class="hidden p-[0.5rem]">Private labeling is the process of branding products that are manufactured by a third party. We can manufacture products for your brand and apply your own branding and labeling to the packaging</div>
               </div>
 
             </div>
@@ -605,10 +604,104 @@
       <!-- ==================================footer===================================== -->
 
       <footer class="py-5" style="border-top: 1px solid black;">
-        <p class="text-center">&copy; 2023 Palmist Healthcare Pvt Ltd. All Rights Reserved</p>
+        <p class="text-center">&copy; 2023 Gorgeous Cosmos Healthcare Pvt Ltd. All Rights Reserved</p>
       </footer>
 
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <script >
+      $(document).ready(function(){
+
+$("#flip").click(function(){
+  $("#panel").slideToggle(300);
+  $("#arrow").toggleClass("rotate");
+
+  $("#panelOne").slideUp(300);
+  $("#arrowOne").removeClass("rotate");
+
+  $("#panelTwo").slideUp(300);
+  $("#arrowTwo").removeClass("rotate");
+
+  $("#panelThree").slideUp(300);
+  $("#arrowThree").removeClass("rotate");
+
+  $("#panelFour").slideUp(300);
+  $("#arrowFour").toggleClass("rotate");
+
+});
+$("#flipTwo").click(function(){
+
+  $("#panel").slideUp(300);
+  $("#arrow").removeClass("rotate");
+  
+  $("#panelOne").slideToggle(300);
+  $("#arrowOne").toggleClass("rotate");
+
+  $("#panelTwo").slideUp(300);
+  $("#arrowTwo").removeClass("rotate");
+
+  $("#panelThree").slideUp(300);
+  $("#arrowThree").removeClass("rotate");
+
+  $("#panelFour").slideUp(300);
+  $("#arrowFour").toggleClass("rotate");
+
+});
+$("#flipThree").click(function(){
+  $("#panelTwo").slideToggle(300);
+  $("#arrowTwo").toggleClass("rotate");
+
+  $("#panel").slideUp(300);
+  $("#arrow").removeClass("rotate");
+  
+  $("#panelOne").slideUp(300);
+  $("#arrowOne").removeClass("rotate");
+
+
+  $("#panelThree").slideUp(300);
+  $("#arrowThree").removeClass("rotate");
+
+  $("#panelFour").slideUp(300);
+  $("#arrowFour").toggleClass("rotate");
+});
+$("#flipFour").click(function(){
+  $("#panelThree").slideToggle(300);
+  $("#arrowThree").toggleClass("rotate");
+
+  $("#panelFour").slideUp(300);
+  $("#arrowFour").toggleClass("rotate");
+
+  $("#panelTwo").slideUp(300);
+  $("#arrowTwo").removeClass("rotate");
+
+  $("#panel").slideUp(300);
+  $("#arrow").removeClass("rotate");
+  
+  $("#panelOne").slideUp(300);
+  $("#arrowOne").removeClass("rotate");
+});
+$("#flipFive").click(function(){
+  $("#panelFour").slideToggle(300);
+  $("#arrowFour").toggleClass("rotate");
+
+  $("#panelThree").slideUp(300);
+  $("#arrowThree").removeClass("rotate");
+
+  $("#panelTwo").slideUp(300);
+  $("#arrowTwo").removeClass("rotate");
+
+  $("#panel").slideUp(300);
+  $("#arrow").removeClass("rotate");
+  
+  $("#panelOne").slideUp(300);
+  $("#arrowOne").removeClass("rotate");
+});
+
+});
+
+    </script>
 
   </body>
 </html>
