--- a/index.html
+++ b/index.html
@@ -170,14 +170,14 @@
                         </div>
                     </div>
                     <div class="h-[300px] w-full md:w-[30%] relative hover:scale-105 transition-all">
-                        <img src="./assest/service/white_label.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
+                        <img src="./assest/service/nailpolish.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
                         <div class="absolute top-0 p-[3rem] flex items-end w-full bg-[#03030370] z-10 h-full">
                           <p class="text-white text-3xl w-[50%]">White Label Manufacturer</p>
                         </div>
                     </div>
 
                     <div class="h-[300px] w-full md:w-[30%] relative hover:scale-105 transition-all">
-                        <img src="./assest/service/formulation.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
+                        <img src="./assest/service/custom.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
                         <div class="absolute top-0 p-[3rem] flex items-end w-full bg-[#03030370] z-10 h-full">
                           <p class="text-white text-3xl w-[50%]">Custom Formulatoin</p>
                         </div>
@@ -186,7 +186,7 @@
 
                 <div class="twoItems flex gap-[80px] flex-col md:flex-row justify-center mt-10">
                     <div class="h-[300px] md:w-[30%] relative hover:scale-105 transition-all">
-                        <img src="./assest/Contract-Manufacturer.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
+                        <img src="./assest/service/manufature.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
                         <div class="absolute top-0 p-[3rem] flex items-end w-full bg-[#03030370] z-10 h-full">
                           <p class="text-white text-3xl w-[50%]">Contract Manufacturing</p>
                         </div>
