add more products

--- a/index.html
+++ b/index.html
@@ -216,23 +216,23 @@
           <div class="pruductItems mt-10">
 
             <div class="flex text-white gap-6 justify-between flex-col md:flex-row">
-              <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[4rem]">
+              <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
                 <img src="./assest/icons/Untitled-2_05-150x150.png" alt="ProductIcon">
-                <p class="text-2xl">SKIN CARE</p>
+                <p class="text-2xl uppercase">COSMETIC Lipstick all range</p>
                 <p class="mt-1">Sunscreen</p>
                 <p class="mt-1">Body Lotion</p>
                 <p class="mt-1">Moisturizers</p>
               </div>
-              <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[4rem]">
+              <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
                 <img src="./assest/icons/Untitled-2_01-150x150.png" alt="ProductIcon">
-                <p class="text-2xl">HAIR CARE</p>
+                <p class="text-2xl uppercase">COSMETIC Liquid Lipstick</p>
                 <p class="mt-1">Shampoos</p>
                 <p class="mt-1">Hair Serum</p>
                 <p class="mt-1">conditioners</p>
               </div>
-              <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[4rem]">
+              <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
                 <img src="./assest/icons/Untitled-2_03-150x150.png" alt="ProductIcon">
-                <p class="text-2xl">BODY CARE</p>
+                <p class="text-2xl uppercase">COSMETIC Eyeliner Mascara Kajal</p>
                 <p class="mt-1">Body Oils</p>
                 <p class="mt-1">Body Wash</p>
                 <p class="mt-1">Shower Gels</p>
@@ -240,28 +240,55 @@
             </div>
 
             <div class="flex text-white gap-6 justify-between flex-col md:flex-row mt-5">
-              <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[4rem]">
+              <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
                 <img src="./assest/icons/Untitled-2_06-150x150.png" alt="ProductIcon">
-                <p class="text-2xl">MEN'S GROOMING</p>
+                <p class="text-2xl uppercase">COSMETIC Foundation Concealer Blusher
+                </p>
                 <p class="mt-1">Face Wash</p>
                 <p class="mt-1">Hair Styling</p>
                 <p class="mt-1">Beard Brooming</p>
               </div>
-              <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[4rem]">
+              <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
                 <img src="./assest/icons/Untitled-2_02-150x150.png" alt="ProductIcon">
-                <p class="text-2xl">BABY CARE</p>
+                <p class="text-2xl uppercase">COSMETIC Perfume</p>
                 <p class="mt-1">Babay Soaps</p>
                 <p class="mt-1">Body Lotion</p>
                 <p class="mt-1">Baby Shampoos</p>
               </div>
-              <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[4rem]">
+              <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
                 <img src="./assest/icons/Untitled-3_01-150x150.png" alt="ProductIcon">
-                <p class="text-2xl">AYURVEDIC</p>
+                <p class="text-2xl uppercase">COSMETIC Face Serum</p>
                 <p class="mt-1">Shampoo</p>
                 <p class="mt-1">Face Wash</p>
                 <p class="mt-1">Oil & Cream</p>
               </div>
             </div>
+
+            <div class="flex text-white gap-6 justify-between flex-col md:flex-row mt-5">
+              <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
+                <img src="./assest/icons/Untitled-2_06-150x150.png" alt="ProductIcon">
+                <p class="text-2xl uppercase">COSMETIC Nail polish
+                </p>
+                <p class="mt-1">Face Wash</p>
+                <p class="mt-1">Hair Styling</p>
+                <p class="mt-1">Beard Brooming</p>
+              </div>
+              <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
+                <img src="./assest/icons/Untitled-2_02-150x150.png" alt="ProductIcon">
+                <p class="text-2xl uppercase">COSMETIC Lip balm</p>
+                <p class="mt-1">Babay Soaps</p>
+                <p class="mt-1">Body Lotion</p>
+                <p class="mt-1">Baby Shampoos</p>
+              </div>
+              <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
+                <img src="./assest/icons/Untitled-3_01-150x150.png" alt="ProductIcon">
+                <p class="text-2xl uppercase">COSMETIC Skin Care</p>
+                <p class="mt-1">Shampoo</p>
+                <p class="mt-1">Face Wash</p>
+                <p class="mt-1">Oil & Cream</p>
+              </div>
+            </div>
+            
           </div>
         </div>
       </section>
