--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </p>
               </div>
               <div class="form w-full lg:w-[50%]">
-                <form action="https://formspree.io/f/xqkvkyqq"
+                <form action="https://formspree.io/f/xqkvaple"
                   method="post"
                   class="flex flex-col gap-7 items-center py-10 px-10 bg-white mb-6"
                 >
@@ -217,21 +217,21 @@
 
             <div class="flex text-white gap-6 justify-between flex-col md:flex-row">
               <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
-                <img src="./assest/icons/Untitled-2_05-150x150.png" alt="ProductIcon">
+                <img src="./assest/lipstickTwo.png" alt="ProductIcon" class="h-[100px] mb-8" >
                 <p class="text-2xl uppercase">COSMETIC Lipstick all range</p>
                 <p class="mt-1">Sunscreen</p>
                 <p class="mt-1">Body Lotion</p>
                 <p class="mt-1">Moisturizers</p>
               </div>
               <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
-                <img src="./assest/icons/Untitled-2_01-150x150.png" alt="ProductIcon">
+                <img src="./assest/lipstick.png" alt="ProductIcon" class="h-[100px] mb-8">
                 <p class="text-2xl uppercase">COSMETIC Liquid Lipstick</p>
                 <p class="mt-1">Shampoos</p>
                 <p class="mt-1">Hair Serum</p>
                 <p class="mt-1">conditioners</p>
               </div>
               <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
-                <img src="./assest/icons/Untitled-2_03-150x150.png" alt="ProductIcon">
+                <img src="./assest/eyeliner-pencils.png" alt="ProductIcon" class="h-[100px] mb-8" >
                 <p class="text-2xl uppercase">COSMETIC Eyeliner Mascara Kajal</p>
                 <p class="mt-1">Body Oils</p>
                 <p class="mt-1">Body Wash</p>
@@ -530,7 +530,7 @@
                 <!-- =========form========= -->
             <div class="md:w-[50%] ">
               <div class="form w-full lg:w-[100%]">
-                <form action="https://formspree.io/f/xqkvkyqq"
+                <form action="https://formspree.io/f/xqkvaple"
                   method="post"
                   class="flex flex-col gap-7 items-center py-10 px-10 bg-white mb-6"
                 >
@@ -624,7 +624,7 @@
         <div class="max-w-[1200px] w-[90%] m-auto">    
         <div class="flex flex-col md:flex-row justify-between gap-5 items-center">
           <h2 class="text-3xl text-center">Need Help? Get in touch with us</h2>
-          <a href="tel:1234567980" class="outline outline-[#DF7373] outline-3 px-10 p-3 rounded-3xl text-[#DF7373] cursor-pointer"><i class="fa-solid fa-phone"></i> 1234567890</a>
+          <a href="tel:8930245245" class="outline outline-[#DF7373] outline-3 px-10 p-3 rounded-3xl text-[#DF7373] cursor-pointer"><i class="fa-solid fa-phone"></i> 8930245245</a>
         </div>
       </div>
       </section>
