changed product icons

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
       <header class="header lg:h-[110vh]">
         <div class="max-w-[1200px] w-[90%] m-auto">
           <!-- =================================================adding navbar=============================== -->
-          <nav class="py-2">
+          <nav class="py-2 flex justify-center flex-col items-center">
             <img src="./assest/logo.png" alt="logo" class="w-20">
+            <p class="text-center text-white font-bold">Gorgeous Cosmos</p>
           </nav>
 
           <!-- ==============================main section=========================================== -->
@@ -126,7 +127,7 @@
       <!-- ===================================competitive Advantage section======================================== -->
 
       <section>
-        <div class="mxa-w-[1200px] w-[90%] m-auto">
+        <div class="max-w-[1200px] w-[90%] m-auto">
           <div class="mainflex flex py-[8rem] flex-col md:flex-row">
             <div class="advantageContent w-full md:w-[50%] py-5 pr-5">
               <p class="text-[#E07A7A]">COMPELLING REASONS TO CHOOSE US</p>
@@ -177,7 +178,7 @@
                     </div>
 
                     <div class="h-[300px] w-full md:w-[30%] relative hover:scale-105 transition-all">
-                        <img src="./assest/service/custom.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
+                        <img src="./assest/service/custom.png" alt="serviceImages" width="100%" class="object-cover object-center h-full">
                         <div class="absolute top-0 p-[3rem] flex items-end w-full bg-[#03030370] z-10 h-full">
                           <p class="text-white text-3xl w-[50%]">Custom Formulatoin</p>
                         </div>
@@ -219,73 +220,69 @@
               <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
                 <img src="./assest/lipstickTwo.png" alt="ProductIcon" class="h-[100px] mb-8" >
                 <p class="text-2xl uppercase">COSMETIC Lipstick all range</p>
-                <p class="mt-1">Sunscreen</p>
-                <p class="mt-1">Body Lotion</p>
-                <p class="mt-1">Moisturizers</p>
+                <p class="mt-1">Normal Lipstick</p>
+                <p class="mt-1">Long Lasting lipstick</p>
+                <p class="mt-1">Pearl with matte lipstick</p>
               </div>
               <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
                 <img src="./assest/lipstick.png" alt="ProductIcon" class="h-[100px] mb-8">
                 <p class="text-2xl uppercase">COSMETIC Liquid Lipstick</p>
-                <p class="mt-1">Shampoos</p>
-                <p class="mt-1">Hair Serum</p>
-                <p class="mt-1">conditioners</p>
+                <p class="mt-1">Normal Liquid Lipstick</p>
+                <p class="mt-1">Long Lasting Liquid lipstick</p>
+                <p class="mt-1">Pearl Liquid lipstick</p>
               </div>
               <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
                 <img src="./assest/eyeliner-pencils.png" alt="ProductIcon" class="h-[100px] mb-8" >
                 <p class="text-2xl uppercase">COSMETIC Eyeliner Mascara Kajal</p>
-                <p class="mt-1">Body Oils</p>
-                <p class="mt-1">Body Wash</p>
-                <p class="mt-1">Shower Gels</p>
+                <p class="mt-1">Sketch eyeliner</p>
+                <p class="mt-1">High pigmented lipliner</p>
+                <p class="mt-1">Soft lipliner</p>
               </div>
             </div>
 
             <div class="flex text-white gap-6 justify-between flex-col md:flex-row mt-5">
               <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
-                <img src="./assest/icons/Untitled-2_06-150x150.png" alt="ProductIcon">
-                <p class="text-2xl uppercase">COSMETIC Foundation Concealer Blusher
-                </p>
-                <p class="mt-1">Face Wash</p>
-                <p class="mt-1">Hair Styling</p>
-                <p class="mt-1">Beard Brooming</p>
+                <img src="./assest/foundation.png" alt="ProductIcon" class="h-[100px]">
+                <p class="text-2xl uppercase">COSMETIC Foundation/ Concealer/ Blusher</p>
+
               </div>
               <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
-                <img src="./assest/icons/Untitled-2_02-150x150.png" alt="ProductIcon">
-                <p class="text-2xl uppercase">COSMETIC Perfume</p>
-                <p class="mt-1">Babay Soaps</p>
-                <p class="mt-1">Body Lotion</p>
-                <p class="mt-1">Baby Shampoos</p>
+                <img src="./assest/perfume.png" alt="ProductIcon" class="h-[100px] mb-8">
+                <p class="text-2xl uppercase">COSMETIC Perfume</p> 
+                <p class="mt-1">Long Lasting Premium Perfume</p>
+                <p class="mt-1">Room Freshner</p>
               </div>
               <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
-                <img src="./assest/icons/Untitled-3_01-150x150.png" alt="ProductIcon">
+                <img src="./assest/serum.png" alt="ProductIcon" class="h-[100px] mb-8">
                 <p class="text-2xl uppercase">COSMETIC Face Serum</p>
-                <p class="mt-1">Shampoo</p>
-                <p class="mt-1">Face Wash</p>
-                <p class="mt-1">Oil & Cream</p>
+                <p class="mt-1">Vitamin C Face Serum</p>
+                <p class="mt-1">Anti Aging Face Serum</p>
+                <p class="mt-1">Radiance Face Serum</p>
               </div>
             </div>
 
             <div class="flex text-white gap-6 justify-between flex-col md:flex-row mt-5">
               <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
-                <img src="./assest/icons/Untitled-2_06-150x150.png" alt="ProductIcon">
+                <img src="./assest/nail-polish.png" alt="ProductIcon" class="h-[100px] mb-8">
                 <p class="text-2xl uppercase">COSMETIC Nail polish
                 </p>
-                <p class="mt-1">Face Wash</p>
-                <p class="mt-1">Hair Styling</p>
-                <p class="mt-1">Beard Brooming</p>
+                <p class="mt-1">Glitter Nail Polish</p>
+                <p class="mt-1">Matte Nail Polish </p>
+                <p class="mt-1">Mettalic Nail Polish</p>
               </div>
               <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
-                <img src="./assest/icons/Untitled-2_02-150x150.png" alt="ProductIcon">
+                <img src="./assest/balm.png" alt="ProductIcon" class="h-[100px] mb-8">
                 <p class="text-2xl uppercase">COSMETIC Lip balm</p>
-                <p class="mt-1">Babay Soaps</p>
-                <p class="mt-1">Body Lotion</p>
-                <p class="mt-1">Baby Shampoos</p>
+                <p class="mt-1">Herbal Lip Balm </p>
+                <p class="mt-1">Lip Balm With Spf</p>
+                <p class="mt-1">Long Lasting Lipgloss</p>
               </div>
               <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
-                <img src="./assest/icons/Untitled-3_01-150x150.png" alt="ProductIcon">
+                <img src="./assest/cream.png" alt="ProductIcon" class="h-[100px] mb-8">
                 <p class="text-2xl uppercase">COSMETIC Skin Care</p>
                 <p class="mt-1">Shampoo</p>
-                <p class="mt-1">Face Wash</p>
-                <p class="mt-1">Oil & Cream</p>
+                <p class="mt-1">FaceWash</p>
+                <p class="mt-1">Oil & Creams</p>
               </div>
             </div>
             
@@ -632,7 +629,7 @@
       <!-- ==================================footer===================================== -->
 
       <footer class="py-5" style="border-top: 1px solid black;">
-        <p class="text-center">&copy; 2023 Gorgeous Cosmos Healthcare Pvt Ltd. All Rights Reserved</p>
+        <p class="text-center">&copy; <span class="date">date</span> Gorgeous Cosmos Healthcare Pvt Ltd. All Rights Reserved</p>
       </footer>
 
     </div>
@@ -640,6 +637,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script >
+      let date = document.querySelector("span.date").innerHTML = new Date().getFullYear();
       $(document).ready(function(){
 
 $("#flip").click(function(){
