--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
               <div
                 class="mainContent w-full lg:w-[50%] py-5 md:py-5 flex flex-col justify-center"
               >
-                <h1 class="text-white font-semibold text-5xl leading-snug">
+                <h1 class="text-white font-semibold text-5xl leading-snug" style="text-shadow: 1px 1px 20px black;">
                   We Are A Leading Private Label Cosmetics Manufacturer
                 </h1>
-                <p class="text-white text-[1.2rem] font-extralight">
+                <p class="text-white text-[1.2rem] font-extralight" style="text-shadow: 1px 1px 5px black;">
                   At Gorgeous Cosmos, we’re not just another company that pushes the
                   existing formulations. We recommend and handhold the customers
                   by suggesting formulations that are new age and have the
@@ -146,7 +146,8 @@
             </div>
 
             <div class="advantageVideo w-full md:w-[50%] flex items-center">
-                <video src="./videos/video (2160p).mp4" controls autoplay loop></video>
+                <!-- <video src="./videos/video (2160p).mp4" controls autoplay loop></video> -->
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/b0z10P4qRyY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
           </div>
         </div>
@@ -219,21 +220,21 @@
             <div class="flex text-white gap-6 justify-between flex-col md:flex-row">
               <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
                 <img src="./assest/lipstickTwo.png" alt="ProductIcon" class="h-[100px] mb-8" >
-                <p class="text-2xl uppercase">COSMETIC Lipstick all range</p>
+                <p class="text-2xl uppercase">Lipstick all range</p>
                 <p class="mt-1">Normal Lipstick</p>
                 <p class="mt-1">Long Lasting lipstick</p>
                 <p class="mt-1">Pearl with matte lipstick</p>
               </div>
               <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
                 <img src="./assest/lipstick.png" alt="ProductIcon" class="h-[100px] mb-8">
-                <p class="text-2xl uppercase">COSMETIC Liquid Lipstick</p>
+                <p class="text-2xl uppercase">Liquid Lipstick</p>
                 <p class="mt-1">Normal Liquid Lipstick</p>
                 <p class="mt-1">Long Lasting Liquid lipstick</p>
                 <p class="mt-1">Pearl Liquid lipstick</p>
               </div>
               <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
                 <img src="./assest/eyeliner-pencils.png" alt="ProductIcon" class="h-[100px] mb-8" >
-                <p class="text-2xl uppercase">COSMETIC Eyeliner Mascara Kajal</p>
+                <p class="text-2xl uppercase">Eyeliner / Mascara / Kajal</p>
                 <p class="mt-1">Sketch eyeliner</p>
                 <p class="mt-1">High pigmented lipliner</p>
                 <p class="mt-1">Soft lipliner</p>
@@ -243,18 +244,18 @@
             <div class="flex text-white gap-6 justify-between flex-col md:flex-row mt-5">
               <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
                 <img src="./assest/foundation.png" alt="ProductIcon" class="h-[100px]">
-                <p class="text-2xl uppercase">COSMETIC Foundation/ Concealer/ Blusher</p>
+                <p class="text-2xl uppercase">Foundation/ Concealer/ Blusher</p>
 
               </div>
               <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
                 <img src="./assest/perfume.png" alt="ProductIcon" class="h-[100px] mb-8">
-                <p class="text-2xl uppercase">COSMETIC Perfume</p> 
+                <p class="text-2xl uppercase">Perfume</p> 
                 <p class="mt-1">Long Lasting Premium Perfume</p>
                 <p class="mt-1">Room Freshner</p>
               </div>
               <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
                 <img src="./assest/serum.png" alt="ProductIcon" class="h-[100px] mb-8">
-                <p class="text-2xl uppercase">COSMETIC Face Serum</p>
+                <p class="text-2xl uppercase">Face Serum</p>
                 <p class="mt-1">Vitamin C Face Serum</p>
                 <p class="mt-1">Anti Aging Face Serum</p>
                 <p class="mt-1">Radiance Face Serum</p>
@@ -264,7 +265,7 @@
             <div class="flex text-white gap-6 justify-between flex-col md:flex-row mt-5">
               <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
                 <img src="./assest/nail-polish.png" alt="ProductIcon" class="h-[100px] mb-8">
-                <p class="text-2xl uppercase">COSMETIC Nail polish
+                <p class="text-2xl uppercase">Nail polish
                 </p>
                 <p class="mt-1">Glitter Nail Polish</p>
                 <p class="mt-1">Matte Nail Polish </p>
@@ -272,14 +273,14 @@
               </div>
               <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
                 <img src="./assest/balm.png" alt="ProductIcon" class="h-[100px] mb-8">
-                <p class="text-2xl uppercase">COSMETIC Lip balm</p>
+                <p class="text-2xl uppercase">Lip balm</p>
                 <p class="mt-1">Herbal Lip Balm </p>
                 <p class="mt-1">Lip Balm With Spf</p>
                 <p class="mt-1">Long Lasting Lipgloss</p>
               </div>
               <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
                 <img src="./assest/cream.png" alt="ProductIcon" class="h-[100px] mb-8">
-                <p class="text-2xl uppercase">COSMETIC Skin Care</p>
+                <p class="text-2xl uppercase">Skin Care</p>
                 <p class="mt-1">Shampoo</p>
                 <p class="mt-1">FaceWash</p>
                 <p class="mt-1">Oil & Creams</p>
