customize according to client

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
               <div
                 class="mainContent w-full lg:w-[50%] py-5 md:py-5 flex flex-col justify-center"
               >
-                <h1 class="text-white font-semibold text-5xl leading-snug" style="text-shadow: 1px 1px 20px black;">
+                <h1 class="text-white font-semibold text-5xl leading-snug">
                   We Are A Leading Private Label Cosmetics Manufacturer
                 </h1>
-                <p class="text-white text-[1.2rem] font-extralight" style="text-shadow: 1px 1px 5px black;">
+                <p class="text-white text-[1.2rem] font-extralight">
                   At Gorgeous Cosmos, we’re not just another company that pushes the
                   existing formulations. We recommend and handhold the customers
                   by suggesting formulations that are new age and have the
@@ -146,7 +146,6 @@
             </div>
 
             <div class="advantageVideo w-full md:w-[50%] flex items-center">
-                <!-- <video src="./videos/video (2160p).mp4" controls autoplay loop></video> -->
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/b0z10P4qRyY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
           </div>
@@ -172,14 +171,14 @@
                         </div>
                     </div>
                     <div class="h-[300px] w-full md:w-[30%] relative hover:scale-105 transition-all">
-                        <img src="./assest/service/nailpolish.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
+                        <img src="./assest/service/3.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
                         <div class="absolute top-0 p-[3rem] flex items-end w-full bg-[#03030370] z-10 h-full">
                           <p class="text-white text-3xl w-[50%]">White Label Manufacturer</p>
                         </div>
                     </div>
 
                     <div class="h-[300px] w-full md:w-[30%] relative hover:scale-105 transition-all">
-                        <img src="./assest/service/custom.png" alt="serviceImages" width="100%" class="object-cover object-center h-full">
+                        <img src="./assest/service/1.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
                         <div class="absolute top-0 p-[3rem] flex items-end w-full bg-[#03030370] z-10 h-full">
                           <p class="text-white text-3xl w-[50%]">Custom Formulatoin</p>
                         </div>
@@ -194,7 +193,7 @@
                         </div>
                     </div>
                 <div class="h-[300px] md:w-[30%] relative hover:scale-105 transition-all" >
-                    <img src="./assest/service/perfume.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
+                    <img src="./assest/service/2.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
                     <div class="absolute top-0 p-[3rem] flex items-end w-full bg-[#03030370] z-10 h-full">
                       <p class="text-white text-3xl w-[50%]">R&D For New Concepts</p>
                     </div>
